[project]
name = "python-changelog"
version = "202601.0"
description = "Conventional Commits, changelog generation, and release notes example project"
requires-python = ">=3.9"

[tool.git-changelog]
convention = "conventional"
parse_trailers = true
in-place = true
sections = ":all:"
output = "CHANGELOG.md"
