[project]
name = "python-changelog"
version = "202601.0"
description = "Conventional Commits, changelog generation, and release notes example project"
requires-python = ">=3.9"

[tool.git-changelog]
convention = "conventional"
parse_trailers = true
sections = "feat, fix, docs, style, refactor, perf, test, build, ci, chore, revert"
output = "CHANGELOG.md"
in-place = true